finalizando entrega final

--- a/index.html
+++ b/index.html
@@ -5,45 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logopestaña.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Dosis:wght@200;300;500;800&family=Montserrat:ital,wght@0,400;0,700;1,100;1,300&display=swap" rel="stylesheet">
+
     <title>YerbaBuena.com</title>
 </head>
 <body>
     <header id="header">
-        <a href="index.html">
-            <img  src="img/LOGOYERBABUENA.jpg" alt="Logo Yerba Buena" class="header__logo">
-        </a>
-        <nav>
-            <ul class="header__nav">
-                <li>
-                    <a href="index.html"><strong>INICIO</strong></a>
+            <h1 class="intro__titulo">YerbaBuena.com</h1>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html"><strong>INICIO</strong></a>
                 </li>
-                <li>
-                    <a href="#comercios"><strong>COMERCIOS</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#comercios"><strong>COMERCIOS</strong></a>
                 </li>
-                <li>
-                    <a href="pages/emprendedores.html"><strong>EMPRENDEDORES</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/emprendedores.html"><strong>EMPRENDEDORES</strong></a>
                 </li>
-                <li>
-                    <a href="pages/eventos.html"><strong>EVENTOS</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/eventos.html"><strong>EVENTOS</strong></a>
                 </li>
-                <li>
-                    <a href="pages/deportes.html"><strong>ACTIVIDAD DEPORTIVA</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/deportes.html"><strong>ACTIVIDAD DEPORTIVA</strong></a>
                 </li>
-                <li>
-                    <a href="pages/tursimo.html"><strong>TURISMO</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/tursimo.html"><strong>TURISMO</strong></a>
                 </li>
-                <li>
-                    <a href="pages/contacto.html"><strong>CONTACTO</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/contacto.html"><strong>CONTACTO</strong></a>
                 </li>
-            </ul>
+
+                </ul>
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+            </div>
         </nav>
     </header>
     <section id="intro">
-        <h1 class="intro__titulo">YerbaBuena.com</h1>
-        <hr>
+
         <span class="intro__texto-inicial">En <strong>YerbaBuena.com</strong> encontrarás toda la info sobre comercios, eventos culturales, actividades, eventos deportivos, tursimo y mucho mas del jardín de Tucumán.</span>
     </section>
 
@@ -119,17 +131,11 @@
             <button>Ingresar</button>
         </div>
     </section>
-    <hr>
     <footer>
         <ul class="footer__ul">
             <li><a href="#comercios">Comercios</a></li>
             <li><a href="pages/emprendedores.html">Emprendedores</a></li>
-            <li><a href="pages/eventos.html">Eventos:</a></li>
-            <ul class="footer__ul__eventos">
-            <li>Deportivos</li>
-            <li>Culturales</li>
-            <li>Gastronómicos</li>
-            </ul>
+            <li><a href="pages/eventos.html">Eventos</a></li>
             <li><a href="pages/tursimo.html">Turismo</a></li>
             <li><a href="pages/contacto.html">Contacto</a></li>
         </ul>
@@ -137,7 +143,7 @@
         <div>
         <a href="https://www.yerbabuena.gob.ar/" target="_blank">Sitio Municipalidad de Yerba Buena</a>
         </div>
-        <div>
+        <div class="gobierno">
         <a href="https://www.tucuman.gob.ar/" target="_blank">Sitio Gobierno de Tucumán</a>
         </div>
         <a href="#header">Ir arriba</a>
