--- a/pages/emprendedores.html
+++ b/pages/emprendedores.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="../img/logopestaña.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Dosis:wght@200;300;500;800&family=Montserrat:ital,wght@0,400;0,700;1,100;1,300&display=swap" rel="stylesheet">
     <title>Emprendedores</title>
@@ -14,34 +15,46 @@
     
     <header>
         <a href="../index.html"><img src="../img/LOGOYERBABUENA.jpg" alt="Logo Yerba Buena" class="header__logo"></a>
-        <nav>
-            <ul class="header__nav">
-                <li>
-                    <a href="../index.html"><strong>INICIO</strong></a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                 </li>
-                <li>
-                    <a href="../index.html#comercios"><strong>COMERCIOS</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#comercios">COMERCIOS</a>
                 </li>
-                <li>
-                    <a href="emprendedores.html"><strong>EMPRENDEDORES</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="emprendedores.html">EMPRENDEDORES</a>
                 </li>
-                <li>
-                    <a href="eventos.html"><strong>EVENTOS</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="eventos.html">EVENTOS</a>
                 </li>
-                <li>
-                    <a href="deportes.html"><strong>ACTIVIDAD DEPORTIVA</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="deportes.html">ACTIVIDAD DEPORTIVA</a>
                 </li>
-                <li>
-                    <a href="tursimo.html"><strong>TURISMO</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="tursimo.html">TURISMO</a>
                 </li>
-                <li>
-                    <a href="contacto.html"><strong>CONTACTO</strong></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">CONTACTO</a>
                 </li>
-            </ul>
+
+                </ul>
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+            </div>
         </nav>
     </header>
     <h1>Emprendedores</h1>
-    <hr>
     <h2>Artistas</h2>
 
     <section class="artistas">
@@ -55,19 +68,12 @@
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/6PAZl6R5Ng8pnfYClPj6YI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
     </section>
-
-    <hr>
-
+    
     <footer>
         <ul class="footer__ul">
             <li><a href="../index.html#comercios">Comercios</a></li>
             <li><a href="emprendedores.html">Emprendedores</a></li>
             <li><a href="eventos.html">Eventos:</a></li>
-            <ul class="footer__ul__eventos">
-            <li>Deportivos</li>
-            <li>Culturales</li>
-            <li>Gastronómicos</li>
-            </ul>
             <li><a href="tursimo.html">Turismo</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
